@@ -1,8 +1,8 @@
 package com.demowebshop.tests.api;
 
 import com.demowebshop.api.business.ActivatePromocodeFacade;
-import com.demowebshop.api.model.Request.ActivatePromocode.ActivatePromocodeRequestDto;
-import com.demowebshop.api.model.Response.ActivatePromocodeResponseDto;
+import com.demowebshop.api.model.request.activatepromocode.ActivatePromocodeRequestDto;
+import com.demowebshop.api.model.response.activatePromocodeResponseDto;
 import org.testng.Assert;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
@@ -12,7 +12,7 @@ public class ActivatePromocodeApiTest {
     @BeforeMethod
     public void setUp() {
 
-        new RegisterPlayerApiTest().TestRegisterPlayer();
+        new RegisterPlayerApiTest().testRegisterPlayer();
     }
 
     @Test
@@ -23,13 +23,13 @@ public class ActivatePromocodeApiTest {
 
         ActivatePromocodeFacade activatePromocodeFacad = new ActivatePromocodeFacade();
 
-        ActivatePromocodeResponseDto userResponse = activatePromocodeFacad.activatePromocode(userRequest);
+        activatePromocodeResponseDto userResponse = activatePromocodeFacad.activatePromocode(userRequest);
 
        Assert.assertTrue(userResponse.getStatus());
        Assert.assertTrue(userResponse.getIncludesDepositPromotions());
         Assert.assertFalse(userResponse.getPromotions().isEmpty());
-        Assert.assertNotNull(userResponse.getPromotions().get(0).getId());
-        Assert.assertNotNull(userResponse.getPromotions().get(0).getType());
-        Assert.assertNotNull(userResponse.getPromotions().get(0).getActivationType());
+        Assert.assertNotNull(userResponse.getPromotions().getFirst().getId());
+        Assert.assertNotNull(userResponse.getPromotions().getFirst().getType());
+        Assert.assertNotNull(userResponse.getPromotions().getFirst().getActivationType());
     }
 }
